unpackaged/main/default/objects/Service_Tracking__e/Service_Tracking__e.object-meta.xml
<CustomObject>
    <label>Service Tracking</label>
    <pluralLabel>Service Trackings</pluralLabel>
</CustomObject>