unpackaged/main/default/objects/Service_Tracking__e/fields/BL_TrackingId__c.field-meta.xml
<CustomField>
    <fullName>BL_TrackingId__c</fullName>
    <label>BL TrackingId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>