unpackaged/main/default/objects/Service_Tracking__e/fields/BL_TrackingUrl__c.field-meta.xml
<CustomField>
    <fullName>BL_TrackingUrl__c</fullName>
    <label>BL TrackingUrl</label>
    <length>50</length>
    <type>Text</type>
</CustomField>