unpackaged/main/default/objects/Service_Tracking__e/fields/D3_CallDate__c.field-meta.xml
<CustomField>
    <fullName>D3_CallDate__c</fullName>
    <label>D3 CallDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>