unpackaged/main/default/objects/Service_Tracking__e/fields/D3_CallId__c.field-meta.xml
<CustomField>
    <fullName>D3_CallId__c</fullName>
    <label>D3 CallId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>