unpackaged/main/default/objects/Service_Tracking__e/fields/SourceSystem_Id__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem_Id__c</fullName>
    <label>SourceSystem Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>