unpackaged/main/default/objects/Service_Tracking__e/fields/TD_TrackingId__c.field-meta.xml
<CustomField>
    <fullName>TD_TrackingId__c</fullName>
    <label>TD TrackingId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>