unpackaged/main/default/objects/Service_Tracking__e/fields/TD_TrackingUrl__c.field-meta.xml
<CustomField>
    <fullName>TD_TrackingUrl__c</fullName>
    <label>TD TrackingUrl</label>
    <length>50</length>
    <type>Text</type>
</CustomField>