unpackaged/main/default/objects/Service_Tracking__e/fields/Tracking_System__c.field-meta.xml
<CustomField>
    <fullName>Tracking_System__c</fullName>
    <label>Tracking System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>