unpackaged/main/default/objects/Service_Tracking__e/fields/Tracking_Type__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Type__c</fullName>
    <label>Tracking Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>