unpackaged/main/default/objects/Service_Tracking__e/fields/Tracking_Url__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Url__c</fullName>
    <label>Tracking Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>