unpackaged/main/default/objects/Service_Tracking__e/fields/WorkOrder_Status__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_Status__c</fullName>
    <label>WorkOrder Status</label>
    <length>16</length>
    <type>Text</type>
</CustomField>